--- a/palavCulto.html
+++ b/palavCulto.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Adtile Fixed Nav</title>
+    <title>Videira Uberlândia</title>
     <meta name="author" content="Adtile">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
@@ -27,8 +27,6 @@
         </nav>
     </header>
     <section>
-        <h1>Audio Palavras - Culto Domingo</h1>
-        <br>
         <div class="palavrasAudio">
             <br>
             <audio controls>
