--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Adtile Fixed Nav</title>
-    <meta name="author" content="Adtile">
+    <title>Videira Uberlândia</title>
+    <meta name="author" content="Cleber Azevedo">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -28,7 +28,6 @@
             </ul>
         </nav>
     </header>
-
     <section id="audioPalavras">
         <div class="pdfAudio">
             <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
