--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Videira Uberlândia</title>
-    <meta name="author" content="Adtile">
+    <meta name="author" content="Cleber Azevedo">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/responsive-nav.js"></script>
