--- a/redirecionar.html
+++ b/redirecionar.html
@@ -11,11 +11,10 @@
     <script src="js/responsive-nav.js"></script>
 </head>
 
-<body>
+<body onload="setTimeout(function() {window.location.href = 'palavCulto.html'}, 7000);">
     <div class="display">
-        <div class="content" onclick="window.location.href='redirecionar.html'">
-            <img src="image/logo vid.png" alt="">
-            <label for="">PRESSIONE</label>
+        <div class="content" onclick="window.location.href='palavCulto.html'">
+            <img src="image/loading.gif" alt="">
         </div>
     </div>
 </body>
