--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Videira Uberlândia</title>
-    <meta name="author" content="Cleber Azevedo">
+    <title>Adtile Fixed Nav</title>
+    <meta name="author" content="Adtile">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href="image/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/grid.css">
     <script src="js/responsive-nav.js"></script>
@@ -28,6 +29,7 @@
             </ul>
         </nav>
     </header>
+
     <section id="audioPalavras">
         <div class="pdfAudio">
             <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
