--- a/celulasAdulto.html
+++ b/celulasAdulto.html
@@ -6,6 +6,7 @@
     <title>Adtile Fixed Nav</title>
     <meta name="author" content="Adtile">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href="image/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/responsive-nav.js"></script>
 </head>
