--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Videira Uberlândia</title>
-    <meta name="author" content="Cleber Azevedo">
+    <title>Adtile Fixed Nav</title>
+    <meta name="author" content="Adtile">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href="image/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/responsive-nav.js"></script>
 </head>
@@ -28,6 +29,8 @@
     </header>
 
     <section>
+        <h1>Audio Palavras - Culto Radicais Livres</h1>
+        <br>
         <div class="palavrasAudio">
             <br>
             <audio controls>
