--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -52,7 +52,7 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01.mp3" type="audio/mpeg">
+                <source src="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01_01.mp3" type="audio/mpeg">
             </audio>
             <br>
             <label for="">Ouvir é a melhor parte - Obr. Bruno Bernardelli</label>
