--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,8 @@
         <a href="#home" class="logo" data-scroll></a>
         <nav class="nav-collapse">
             <ul>
-                <li class="menu-item active"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a></li>
+                <li class="menu-item active"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
+                </li>
                 <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
                 <li class="menu-item"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
                 <li class="menu-item"><a href="celulasAdulto.html" data-scroll>Células - Rede de Adultos</a></li>
@@ -30,38 +31,23 @@
     <section>
         <div class="palavrasAudio">
             <br>
-            <audio controls>
-                <source src="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" type="audio/mpeg">
-            </audio>
-            <br>
-            <label for="">Deus ouve o justo - Pr. Raphael Vieira</label>
-            <br>
-            <label for="">19 de janeiro de 2020</label>
-            <br>
-            <button>
-            <a href="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" download>
-               Download
-               </a>
-            </button>
-            <br>
+            <a href="palavCulto.html">
+                <h1>Audio Palavras - Culto Domingo</h1>
+            </a>
             <br>
         </div>
         <div class="palavrasAudio">
             <br>
-            <audio controls>
-                <source src="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" type="audio/mpeg">
-            </audio>
-            <br>
-            <label for="">Deus não esta zangado com você - Pr. Raphael Vieira</label>
-            <br>
-            <label for="">26 de janeiro de 2020</label>
-            <br>
-            <button>
-            <a href="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" download>
-               Download
+            <a href="palavRadicais.html">
+                <h1>Audio Palavras - Culto Radicais Livres</h1>
             </a>
-            </button>
             <br>
+        </div>
+        <div class="palavrasAudio">
+            <br>
+            <a href="pdfCulto.html">
+                <h1>Informativo - Culto Domingo</h1>
+            </a>
             <br>
         </div>
     </section>
