--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -20,17 +20,11 @@
                 <li class="menu-item active"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a></li>
                 <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
                 <li class="menu-item"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
-                <li class="menu-item"><a href="celulasAdulto.html" data-scroll>Células - Rede de Adultos</a></li>
-                <li class="menu-item"><a href="celulasRadicais.html" data-scroll>Células - Radicais Livres</a></li>
-                <li class="menu-item"><a href="celulasRadicaisKids.html" data-scroll>Células - Radicais Kids</a></li>
-
             </ul>
         </nav>
     </header>
 
     <section>
-        <h1>Audio Palavras - Culto Radicais Livres</h1>
-        <br>
         <div class="palavrasAudio">
             <br>
             <audio controls>
@@ -52,7 +46,7 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01_01.mp3" type="audio/mpeg">
+                <source src="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01.mp3" type="audio/mpeg">
             </audio>
             <br>
             <label for="">Ouvir é a melhor parte - Obr. Bruno Bernardelli</label>
