--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -22,38 +22,26 @@
                 </li>
                 <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
                 <li class="menu-item"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
-                <li class="menu-item"><a href="celulasAdulto.html" data-scroll>Células - Rede de Adultos</a></li>
-                <li class="menu-item"><a href="celulasRadicais.html" data-scroll>Células - Radicais Livres</a></li>
-                <li class="menu-item"><a href="celulasRadicaisKids.html" data-scroll>Células - Radicais Kids</a></li>
 
             </ul>
         </nav>
     </header>
-
     <section id="audioPalavras">
         <div class="pdfAudio">
-            <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
+            <a href="pdf/Informativo 19-01-2020.pdf" download>
+                <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
+            </a>
             <br>
             <label for="">19 de janeiro de 2020</label>
             <br>
-            <button>
-                <a href="pdf/Informativo 19-01-2020.pdf"
-                    download>
-                    Download
-                </a>
-            </button>
         </div>
         <div class="pdfAudio">
-            <img src="image/capaInformativo/capa 26 de janeiro - vid uberlandia.png" alt="">
+            <a href="pdf/Informativo 26-01-2020.pdf" download>
+                <img src="image/capaInformativo/capa 26 de janeiro - vid uberlandia.png" alt="">
+            </a>
             <br>
             <label for="">26 de janeiro de 2020</label>
             <br>
-            <button>
-                <a href="pdf/Informativo 26-01-2020.pdf"
-                    download>
-                    Download
-                </a>
-            </button>
         </div>
     </section>
 
