--- a/redirecionar.html
+++ b/redirecionar.html
@@ -12,9 +12,9 @@
     <script src="js/responsive-nav.js"></script>
 </head>
 
-<body onload="setTimeout(function() {window.location.href = 'palavCulto.html'}, 7000);">
+<body onload="setTimeout(function() {window.location.href = 'menu.html'}, 5000);">
     <div class="display">
-        <div class="content" onclick="window.location.href='palavCulto.html'">
+        <div class="content" onclick="window.location.href='menu.html'">
             <img src="image/loading.gif" alt="">
         </div>
     </div>
