--- a/menu.html
+++ b/menu.html
@@ -21,33 +21,36 @@
                 </li>
                 <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
                 <li class="menu-item"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
-                <li class="menu-item"><a href="celulasAdulto.html" data-scroll>Células - Rede de Adultos</a></li>
-                <li class="menu-item"><a href="celulasRadicais.html" data-scroll>Células - Radicais Livres</a></li>
-                <li class="menu-item"><a href="celulasRadicaisKids.html" data-scroll>Células - Radicais Kids</a></li>
 
             </ul>
         </nav>
     </header>
     <section>
-        <div class="palavrasAudio">
+        <div class="pdfAudio">
             <br>
-            <a href="palavCulto.html">
-                <h1>Audio Palavras - Culto Domingo</h1>
+            <br>
+            <a href="palavCulto.html" style="color:white; font-size: 15px">
+                <h1>AUDIO - CULTO DOMINGO</h1>
             </a>
+            <br>
             <br>
         </div>
-        <div class="palavrasAudio">
+        <div class="pdfAudio">
             <br>
-            <a href="palavRadicais.html">
-                <h1>Audio Palavras - Culto Radicais Livres</h1>
+            <br>
+            <a href="palavRadicais.html" style="color:white; font-size: 15px">
+                <h1>AUDIO - CULTO RADICAIS LIVRES</h1>
             </a>
+            <br>
             <br>
         </div>
-        <div class="palavrasAudio">
+        <div class="pdfAudio">
             <br>
-            <a href="pdfCulto.html">
-                <h1>Informativo - Culto Domingo</h1>
+            <br>
+            <a href="pdfCulto.html" style="color:white; font-size: 15px">
+                <h1>INFORMATIVO - CULTO DOMINGO</h1>
             </a>
+            <br>
             <br>
         </div>
     </section>
