--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Adtile Fixed Nav</title>
+    <title>Videira Uberlândia</title>
     <meta name="author" content="Adtile">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="image/favicon.ico" />
@@ -28,29 +28,23 @@
     <section>
         <div class="pdfAudio">
             <br>
-            <br>
-            <a href="palavCulto.html" style="color:white; font-size: 15px">
-                <h1>AUDIO - CULTO DOMINGO</h1>
+            <a href="palavCulto.html" style="color:white; font-size: 12px">
+                <h1>PALAVRA - CULTO DOMINGO</h1>
             </a>
-            <br>
             <br>
         </div>
         <div class="pdfAudio">
             <br>
-            <br>
-            <a href="palavRadicais.html" style="color:white; font-size: 15px">
-                <h1>AUDIO - CULTO RADICAIS LIVRES</h1>
+            <a href="palavRadicais.html" style="color:white; font-size: 12px">
+                <h1>PALAVRA - CULTO RADICAIS LIVRES</h1>
             </a>
-            <br>
             <br>
         </div>
         <div class="pdfAudio">
             <br>
-            <br>
-            <a href="pdfCulto.html" style="color:white; font-size: 15px">
+            <a href="pdfCulto.html" style="color:white; font-size: 12px">
                 <h1>INFORMATIVO - CULTO DOMINGO</h1>
             </a>
-            <br>
             <br>
         </div>
     </section>
