--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -46,7 +46,7 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01.mp3" type="audio/mpeg">
+                <source src="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01_01.mp3" type="audio/mpeg">
             </audio>
             <br>
             <label for="">Ouvir é a melhor parte - Obr. Bruno Bernardelli</label>
@@ -54,7 +54,7 @@
             <label for="">25 de janeiro de 2020</label>
             <br>
             <button>
-            <a href="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01.mp3" download>
+            <a href="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01_01.mp3" download>
                Download
                </a>
             </button>
