--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="display">
-        <div class="content" onclick="window.location.href='redirecionar.html'">
+        <div class="content" onclick="window.location.href='menu.html'">
             <img src="image/logo vid.png" alt="">
             <label for="">PRESSIONE</label>
         </div>
