--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Adtile Fixed Nav</title>
-    <meta name="author" content="Adtile">
+    <title>Videira Uberlândia</title>
+    <meta name="author" content="Cleber Azevedo">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="image/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css">
