--- a/palavCulto.html
+++ b/palavCulto.html
@@ -28,6 +28,24 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
+                <source src="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">A oração que prevalece - Pr Raphael Vieira</label>
+            <br>
+            <label for="">19 de janeiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" download>
+               Download
+               </a>
+            </button>
+            <br>
+            <br>
+        </div>
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
                 <source src="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
