--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="display">
         <div class="content" onclick="window.location.href='menu.html'">
             <img src="image/logo vid.png" alt="">
-            <label for="">PRESSIONE</label>
+            <label for="" style="font-size:12px">PRESSIONE</label>
         </div>
     </div>
 </body>
