--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -18,7 +18,7 @@
         <a href="#home" class="logo" data-scroll></a>
         <nav class="nav-collapse">
             <ul>
-                <li class="menu-item"><a href="menu.html" data-scroll>Página Principalo</a>
+                <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a>
                 </li>
                 <li class="menu-item"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
                 </li>
