--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -17,7 +17,7 @@
         <a href="#home" class="logo" data-scroll></a>
         <nav class="nav-collapse">
             <ul>
-                <li class="menu-item"><a href="menu.html" data-scroll>Página Principalo</a></li>
+                <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a></li>
                 <li class="menu-item"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a></li>                
                 <li class="menu-item active"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
                 <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
