alteração botões do menu

--- a/menu.html
+++ b/menu.html
@@ -8,29 +8,26 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="image/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/especial.css">
+    <link rel="stylesheet" href="css/keyframes.css">
     <script src="js/responsive-nav.js"></script>
 </head>
 
-<body>
+<body onload="style='animation: animatetop'">
     <section>
         <div class="pdfAudio">
             <br>
-            <a href="palavCulto.html" style="color:white; font-size: 12px">
-                <h1>PALAVRA - CULTO DOMINGO</h1>
-            </a>
+            <input name="" id="" type="button" value="PALAVRA - CULTO DOMINGO" onclick="window.location.href='palavCulto.html'">
             <br>
         </div>
         <div class="pdfAudio">
             <br>
-            <a href="palavRadicais.html" style="color:white; font-size: 12px">
-                <h1>PALAVRA - CULTO RADICAIS LIVRES</h1>
-            </a>
+            <input name="" id="" type="button" value="PALAVRA - CULTO RADICAIS LIVRES" onclick="window.location.href='palavRadicais.html'">
             <br>
         </div>
         <div class="pdfAudio">
             <br>
-            <a href="pdfCulto.html" style="color:white; font-size: 12px">
-                <h1>INFORMATIVO - CULTO DOMINGO</h1>
+            <input name="" id="" type="button" value="INFORMATIVO - CULTO DOMINGO" onclick="window.location.href='pdfCulto.html'">
             </a>
             <br>
         </div>
