--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -27,30 +27,34 @@
             </ul>
         </nav>
     </header>
-    <section id="audioPalavras">
-        <div class="pdfAudio">
-            <a href="pdf/Informativo 12-01-2020.pdf" download>
-                <img src="image/capaInformativo/capa 12 de janeiro - vid uberlandia.png" alt="">
-            </a>
-            <br>
-            <label for="">12 de janeiro de 2020</label>
-            <br>
+    <section id="audioPalavras" class="container">
+        <div class="row">
+            <div class="pdfAudio">
+                <a href="pdf/Informativo 12-01-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 12 de janeiro - vid uberlandia.png" alt="">
+                </a>
+                <br>
+                <label for="">12 de janeiro de 2020</label>
+                <br>
+            </div>
+            <div class="pdfAudio">
+                <a href="pdf/Informativo 19-01-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
+                </a>
+                <br>
+                <label for="">19 de janeiro de 2020</label>
+                <br>
+            </div>
         </div>
-        <div class="pdfAudio">
-            <a href="pdf/Informativo 19-01-2020.pdf" download>
-                <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
-            </a>
-            <br>
-            <label for="">19 de janeiro de 2020</label>
-            <br>
-        </div>
-        <div class="pdfAudio">
-            <a href="pdf/Informativo 26-01-2020.pdf" download>
-                <img src="image/capaInformativo/capa 26 de janeiro - vid uberlandia.png" alt="">
-            </a>
-            <br>
-            <label for="">26 de janeiro de 2020</label>
-            <br>
+        <div class="row">
+            <div class="pdfAudio">
+                <a href="pdf/Informativo 26-01-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 26 de janeiro - vid uberlandia.png" alt="">
+                </a>
+                <br>
+                <label for="">26 de janeiro de 2020</label>
+                <br>
+            </div>
         </div>
     </section>
 
