--- a/menu.html
+++ b/menu.html
@@ -15,17 +15,17 @@
 
 <body onload="style='animation: animatetop'">
     <section>
-        <div class="pdfAudio">
+        <div class="menuVideira">
             <br>
             <input name="" id="" type="button" value="PALAVRA - CULTO DOMINGO" onclick="window.location.href='palavCulto.html'">
             <br>
         </div>
-        <div class="pdfAudio">
+        <div class="menuVideira">
             <br>
             <input name="" id="" type="button" value="PALAVRA - CULTO RADICAIS LIVRES" onclick="window.location.href='palavRadicais.html'">
             <br>
         </div>
-        <div class="pdfAudio">
+        <div class="menuVideira">
             <br>
             <input name="" id="" type="button" value="INFORMATIVO - CULTO DOMINGO" onclick="window.location.href='pdfCulto.html'">
             </a>
