--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -28,8 +28,8 @@
         </nav>
     </header>
     <section id="audioPalavras" class="container">
-        <div class="row">
-            <div class="pdfAudio">
+        <div class="row linhaPdf">
+            <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 12-01-2020.pdf" download>
                     <img src="image/capaInformativo/capa 12 de janeiro - vid uberlandia.png" alt="">
                 </a>
@@ -37,7 +37,7 @@
                 <label for="">12 de janeiro de 2020</label>
                 <br>
             </div>
-            <div class="pdfAudio">
+            <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 19-01-2020.pdf" download>
                     <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
                 </a>
@@ -46,14 +46,17 @@
                 <br>
             </div>
         </div>
-        <div class="row">
-            <div class="pdfAudio">
+        <div class="row linhaPdf">
+            <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 26-01-2020.pdf" download>
                     <img src="image/capaInformativo/capa 26 de janeiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
                 <label for="">26 de janeiro de 2020</label>
                 <br>
+            </div>
+            <div class="pdfAudio col-dg-6 col-dm-6">
+
             </div>
         </div>
     </section>
