--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -56,7 +56,12 @@
                 <br>
             </div>
             <div class="pdfAudio col-dg-6 col-dm-6">
-
+                <a href="" download>
+                    <img src="image/capaInformativo/capaBlack.png" alt="">
+                </a>
+                <br>
+                <label for="">02 de fevereiro de 2020</label>
+                <br>
             </div>
         </div>
     </section>
