--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/keyframes.css">
     <script src="js/responsive-nav.js"></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157470171-1"></script>
+    <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-157470171-1');
+    </script>
+    
 </head>
 
 <body>
