--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="css/especial.css">
     <link rel="stylesheet" href="css/keyframes.css">
     <script src="js/responsive-nav.js"></script>
+    
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157470171-1"></script>
+    <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-157470171-1');
+    </script>
+    
 </head>
 
 <body onload="style='animation: animatetop'">
