--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -56,13 +56,11 @@
                 <br>
             </div>
             <div class="pdfAudio col-dg-6 col-dm-6">
-                <a href="">
+                <a href="pdf/Informativo 02-02-2020.pdf" download>
                     <img src="image/capaInformativo/capa 02 de fevereiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
                 <label for="">02 de fevereiro de 2020</label>
-                <br>
-                <label for="">EM BREVE</label>
                 <br>
             </div>
         </div>
