--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -72,6 +72,24 @@
             <br>
             <br>
         </div>
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/radicaisLivres/Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes</label>
+            <br>
+            <label for="">01 de fevereiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/radicaisLivres/Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020" download>
+               Download
+               </a>
+            </button>
+            <br>
+            <br>
+        </div>
 
     </section>
 
