--- a/palavCulto.html
+++ b/palavCulto.html
@@ -91,6 +91,24 @@
             <br>
             <br>
         </div>
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/cultoDomingo/Princípios da Oração Respondida - Pr. Raphael Vieira - 02 fev 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Princípios da Oração Respondida - Pr. Raphael Vieira</label>
+            <br>
+            <label for="">02 de fevereiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/cultoDomingo/Princípios da Oração Respondida - Pr. Raphael Vieira - 02 fev 2020.mp3" download>
+               Download
+            </a>
+            </button>
+            <br>
+            <br>
+        </div>
     </section>
 
 
