--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -75,7 +75,7 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/radicaisLivres/Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020" type="audio/mpeg">
+                <source src="audio/radicaisLivres/Jesus Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
             <label for="">Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes</label>
@@ -83,7 +83,7 @@
             <label for="">01 de fevereiro de 2020</label>
             <br>
             <button>
-            <a href="audio/radicaisLivres/Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020" download>
+            <a href="audio/radicaisLivres/Jesus Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020.mp3" download>
                Download
                </a>
             </button>
