--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -90,6 +90,24 @@
             <br>
             <br>
         </div>
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/radicaisLivres/Quem é o meu próximo - Obr. Marlon Portela - 08 Fevereiro 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Quem é o meu próximo? - Obr. Marlon Portela</label>
+            <br>
+            <label for="">08 de fevereiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/radicaisLivres/Quem é o meu próximo - Obr. Marlon Portela - 08 Fevereiro 2020.mp3" download>
+               Download
+               </a>
+            </button>
+            <br>
+            <br>
+        </div>
 
     </section>
 
