--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -64,6 +64,20 @@
                 <br>
             </div>
         </div>
+        <div class="row linhaPdf">
+            <div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 09-02-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 09 de fevereiro - vid uberlandia.png" alt="">
+                </a>
+                <br>
+                <label for="">09 de fevereiro de 2020</label>
+                <br>
+            </div>
+            <div class="pdfAudio col-dg-6 col-dm-6">
+                
+            </div>
+        </div>
+        
     </section>
 
     </div>
