--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -73,7 +73,7 @@
                 <label for="">09 de fevereiro de 2020</label>
                 <br>
             </div>
-            <div class="pdfAudio col-dg-6 col-dm-6">
+            <div class="pdfAudio col-dg-6 col-dm-6" style="width:62px">
                 
             </div>
         </div>
