--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -73,8 +73,11 @@
                 <label for="">09 de fevereiro de 2020</label>
                 <br>
             </div>
-            <div class="pdfAudio col-dg-6 col-dm-6" style="width:72px">
-                
+            <div class="pdfAudio col-dg-6 col-dm-6">
+                <img src="image/capaInformativo/fundo preto.png" alt="">
+                <br>
+                <label for=""></label>
+                <br>                
             </div>
         </div>
         
