--- a/palavCulto.html
+++ b/palavCulto.html
@@ -109,6 +109,24 @@
             <br>
             <br>
         </div>
+         <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/cultoDomingo/A base da Obra Consumada - Pr. Adalberto Garcia - 09 fevereiro 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">A base da Obra Consumada - Pr. Adalberto Garcia</label>
+            <br>
+            <label for="">09 de fevereiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/cultoDomingo/A base da Obra Consumada - Pr. Adalberto Garcia - 09 fevereiro 2020.mp3" download>
+               Download
+            </a>
+            </button>
+            <br>
+            <br>
+        </div>
     </section>
 
 
