--- a/palavCulto.html
+++ b/palavCulto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -38,53 +38,18 @@
         </nav>
     </header>
     <section>
-        <div class="palavrasAudio">
-            <audio controls>
-                <source src="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" type="audio/mpeg">
-            </audio>
-            <br>
-            <label for="">A oração que prevalece - Pr Raphael Vieira</label>
-            <br>
-            <label for="">12 de janeiro de 2020</label>
-            <br>
-            <button>
-            <a href="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" download>
-               Download
-               </a>
-            </button>
-            <br>
-            <br>
-        </div>
-        <div class="palavrasAudio">
+         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" type="audio/mpeg">
+                <source src="audio/cultoDomingo/A base da Obra Consumada - Pr. Adalberto Garcia - 09 fevereiro 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
-            <label for="">Deus ouve o justo - Pr. Raphael Vieira</label>
+            <label for="">A base da Obra Consumada - Pr. Adalberto Garcia</label>
             <br>
-            <label for="">19 de janeiro de 2020</label>
-            <br>
-            <button>
-            <a href="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" download>
-               Download
-               </a>
-            </button>
-            <br>
-            <br>
-        </div>
-        <div class="palavrasAudio">
-            <br>
-            <audio controls>
-                <source src="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" type="audio/mpeg">
-            </audio>
-            <br>
-            <label for="">Deus não esta zangado com você - Pr. Raphael Vieira</label>
-            <br>
-            <label for="">26 de janeiro de 2020</label>
+            <label for="">09 de fevereiro de 2020</label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" download>
+            <a href="audio/cultoDomingo/A base da Obra Consumada - Pr. Adalberto Garcia - 09 fevereiro 2020.mp3" download>
                Download
             </a>
             </button>
@@ -109,20 +74,55 @@
             <br>
             <br>
         </div>
-         <div class="palavrasAudio">
+		<div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/cultoDomingo/A base da Obra Consumada - Pr. Adalberto Garcia - 09 fevereiro 2020.mp3" type="audio/mpeg">
+                <source src="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
-            <label for="">A base da Obra Consumada - Pr. Adalberto Garcia</label>
+            <label for="">Deus não esta zangado com você - Pr. Raphael Vieira</label>
             <br>
-            <label for="">09 de fevereiro de 2020</label>
+            <label for="">26 de janeiro de 2020</label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/A base da Obra Consumada - Pr. Adalberto Garcia - 09 fevereiro 2020.mp3" download>
+            <a href="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" download>
                Download
             </a>
+            </button>
+            <br>
+            <br>
+        </div>
+		<div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Deus ouve o justo - Pr. Raphael Vieira</label>
+            <br>
+            <label for="">19 de janeiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" download>
+               Download
+               </a>
+            </button>
+            <br>
+            <br>
+        </div>
+        <div class="palavrasAudio">
+            <audio controls>
+                <source src="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">A oração que prevalece - Pr Raphael Vieira</label>
+            <br>
+            <label for="">12 de janeiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" download>
+               Download
+               </a>
             </button>
             <br>
             <br>
