--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -27,22 +27,23 @@
             </ul>
         </nav>
     </header>
+    
     <section id="audioPalavras" class="container">
         <div class="row linhaPdf">
-            <div class="pdfAudio col-dg-6 col-dm-6">
-                <a href="pdf/Informativo 12-01-2020.pdf" download>
-                    <img src="image/capaInformativo/capa 12 de janeiro - vid uberlandia.png" alt="">
+			<div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 09-02-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 09 de fevereiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">12 de janeiro de 2020</label>
+                <label for="">09 de fevereiro de 2020</label>
                 <br>
             </div>
-            <div class="pdfAudio col-dg-6 col-dm-6">
-                <a href="pdf/Informativo 19-01-2020.pdf" download>
-                    <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
+			<div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 02-02-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 02 de fevereiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">19 de janeiro de 2020</label>
+                <label for="">02 de fevereiro de 2020</label>
                 <br>
             </div>
         </div>
@@ -54,23 +55,23 @@
                 <br>
                 <label for="">26 de janeiro de 2020</label>
                 <br>
-            </div>
-            <div class="pdfAudio col-dg-6 col-dm-6">
-                <a href="pdf/Informativo 02-02-2020.pdf" download>
-                    <img src="image/capaInformativo/capa 02 de fevereiro - vid uberlandia.png" alt="">
+            </div>            
+			<div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 19-01-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">02 de fevereiro de 2020</label>
+                <label for="">19 de janeiro de 2020</label>
                 <br>
             </div>
         </div>
         <div class="row linhaPdf">
-            <div class="pdfAudio col-dg-6 col-dm-6">
-                <a href="pdf/Informativo 09-02-2020.pdf" download>
-                    <img src="image/capaInformativo/capa 09 de fevereiro - vid uberlandia.png" alt="">
+			<div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 12-01-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 12 de janeiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">09 de fevereiro de 2020</label>
+                <label for="">12 de janeiro de 2020</label>
                 <br>
             </div>
             <div class="pdfAudio col-dg-6 col-dm-6">
@@ -80,11 +81,7 @@
                 <br>                
             </div>
         </div>
-        
     </section>
-
-    </div>
-
 
     <script src="js/fastclick.js"></script>
     <script src="js/scroll.js"></script>
