--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="row linhaPdf">
-			<div class="pdfAudio col-dg-6 col-dm-6">
+	    <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 12-01-2020.pdf" download>
                     <img src="image/capaInformativo/capa 12 de janeiro - vid uberlandia.png" alt="">
                 </a>
@@ -75,10 +75,12 @@
                 <br>
             </div>
             <div class="pdfAudio col-dg-6 col-dm-6">
-                <img src="image/capaInformativo/fundo preto.png" alt="">
+                <a href="pdf/Informativo 16-01-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 16 de janeiro - vid uberlandia.png" alt="">
+                </a>
                 <br>
-                <label for=""></label>
-                <br>                
+                <label for="">16 de janeiro de 2020</label>
+                <br>
             </div>
         </div>
     </section>
