--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -30,12 +30,12 @@
 
     <section id="audioPalavras" class="container">
         <div class="row linhaPdf">
-            <div class="pdfAudio col-dg-5 col-dm-6">
-                <a href="pdf/Informativo 16-01-2020.pdf" download>
+            <div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 16-02-2020.pdf" download>
                     <img src="image/capaInformativo/capa 16 de fevereiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">16 de janeiro de 2020</label>
+                <label for="">16 fevereiro 2020</label>
                 <br>
             </div>
             <div class="pdfAudio col-dg-6 col-dm-6">
@@ -43,7 +43,7 @@
                     <img src="image/capaInformativo/capa 09 de fevereiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">09 de fevereiro de 2020</label>
+                <label for="">09 fevereiro 2020</label>
                 <br>
             </div>
         </div>
@@ -55,7 +55,7 @@
                     <img src="image/capaInformativo/capa 02 de fevereiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">02 de fevereiro de 2020</label>
+                <label for="">02 fevereiro 2020</label>
                 <br>
             </div>
             <div class="pdfAudio col-dg-6 col-dm-6">
@@ -63,7 +63,7 @@
                     <img src="image/capaInformativo/capa 26 de janeiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">26 de janeiro de 2020</label>
+                <label for="">26 janeiro 2020</label>
                 <br>
             </div>
 
@@ -74,7 +74,7 @@
                     <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">19 de janeiro de 2020</label>
+                <label for="">19 janeiro 2020</label>
                 <br>
             </div>
             <div class="pdfAudio col-dg-6 col-dm-6">
@@ -82,7 +82,7 @@
                     <img src="image/capaInformativo/capa 12 de janeiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
-                <label for="">12 de janeiro de 2020</label>
+                <label for="">12 janeiro 2020</label>
                 <br>
             </div>
         </div>
