--- a/palavCulto.html
+++ b/palavCulto.html
@@ -38,6 +38,24 @@
         </nav>
     </header>
     <section>
+	 <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/cultoDomingo/A batalha da mente - Pr Raphael Vieira - 16 fevereiro 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">A batalha da mente - Pr Raphael Vieira</label>
+            <br>
+            <label for="">16 de fevereiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/cultoDomingo/A batalha da mente - Pr Raphael Vieira - 16 fevereiro 2020.mp3" download>
+               Download
+            </a>
+            </button>
+            <br>
+            <br>
+        </div>
          <div class="palavrasAudio">
             <br>
             <audio controls>
