nova aba conferencia radicais 2020

--- a/menu.html
+++ b/menu.html
@@ -11,17 +11,20 @@
     <link rel="stylesheet" href="css/especial.css">
     <link rel="stylesheet" href="css/keyframes.css">
     <script src="js/responsive-nav.js"></script>
-    
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157470171-1"></script>
     <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-          gtag('config', 'UA-157470171-1');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-157470171-1');
     </script>
-    
+
 </head>
 
 <body onload="style='animation: animatetop'">
@@ -39,6 +42,12 @@
         <div class="menuVideira">
             <br>
             <input name="" id="" type="button" value="INFORMATIVO - CULTO DOMINGO" onclick="window.location.href='pdfCulto.html'">
+            </a>
+            <br>
+        </div>
+        <div class="menuVideira">
+            <br>
+            <input name="" id="" type="button" value="CONFERÊNCIA RADICAIS LIVRES 2020" onclick="window.location.href='confRadicais2020.html'" style="background-image: linear-gradient(rgb(24, 7, 97), rgb(180, 22, 219)); box-shadow: 2px 7px 5px #360158;text-shadow: 1.2px 1.2px 2px #000000;">
             </a>
             <br>
         </div>
