--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -9,17 +9,20 @@
     <link rel="shortcut icon" href="image/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/responsive-nav.js"></script>
-    
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157470171-1"></script>
     <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-          gtag('config', 'UA-157470171-1');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-157470171-1');
     </script>
-    
+
 </head>
 
 <body>
@@ -29,7 +32,7 @@
         <nav class="nav-collapse">
             <ul>
                 <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a></li>
-                <li class="menu-item"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a></li>                
+                <li class="menu-item"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a></li>
                 <li class="menu-item active"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
                 <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
             </ul>
@@ -37,7 +40,25 @@
     </header>
 
     <section>
-	<div class="palavrasAudio">
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/radicaisLivres/Relacionamentos que Transformam - Pr. Bruno Bernardelli - 23 fevereiro 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Relacionamentos que Transformam - Pr. Bruno Bernardelli</label>
+            <br>
+            <label for="">22 de fevereiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/radicaisLivres/Relacionamentos que Transformam - Pr. Bruno Bernardelli - 23 fevereiro 2020.mp3" download>
+               Download
+               </a>
+            </button>
+            <br>
+            <br>
+        </div>
+        <div class="palavrasAudio">
             <br>
             <audio controls>
                 <source src="audio/radicaisLivres/Quem é o meu próximo - Obr. Marlon Portela - 08 Fevereiro 2020.mp3" type="audio/mpeg">
@@ -55,10 +76,10 @@
             <br>
             <br>
         </div>
-	<div class="palavrasAudio">
+        <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="audio/radicaisLivres/Jesus Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020.mp3" type="audio/mpeg">
+                <source src="https://doc-14-70-docs.googleusercontent.com/docs/securesc/rveuubp6e6f4174d42rkcnp9k6ofapm0/robaac3e6h3v63geit7on7uvn680km29/1581967800000/05548900624201014952/05548900624201014952/1IYHYh_RguDd7nyKN5M7lp6qqZ-1nAC9p?e=download&authuser=3" type="audio/mpeg">
             </audio>
             <br>
             <label for="">Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes</label>
@@ -66,14 +87,14 @@
             <label for="">01 de fevereiro de 2020</label>
             <br>
             <button>
-            <a href="audio/radicaisLivres/Jesus Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020.mp3" download>
+            <a href="https://doc-14-70-docs.googleusercontent.com/docs/securesc/rveuubp6e6f4174d42rkcnp9k6ofapm0/robaac3e6h3v63geit7on7uvn680km29/1581967800000/05548900624201014952/05548900624201014952/1IYHYh_RguDd7nyKN5M7lp6qqZ-1nAC9p?e=download&authuser=3   " download>
                Download
                </a>
             </button>
             <br>
             <br>
         </div>
-	<div class="palavrasAudio">
+        <div class="palavrasAudio">
             <br>
             <audio controls>
                 <source src="audio/radicaisLivres/Ouvir é a melhor parte - Obr. Bruno Bernardelli - 26 jan 2020_01_01.mp3" type="audio/mpeg">
@@ -92,7 +113,7 @@
             <br>
         </div>
         <div class="palavrasAudio">
-	    <br>
+            <br>
             <audio controls>
                 <source src="audio/radicaisLivres/Quais pessoas tem te inspirado  - Obr. Marlon Portela - 18 jan 20.mp3" type="audio/mpeg">
             </audio>
