--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -79,7 +79,7 @@
         <div class="palavrasAudio">
             <br>
             <audio controls>
-                <source src="https://doc-14-70-docs.googleusercontent.com/docs/securesc/rveuubp6e6f4174d42rkcnp9k6ofapm0/robaac3e6h3v63geit7on7uvn680km29/1581967800000/05548900624201014952/05548900624201014952/1IYHYh_RguDd7nyKN5M7lp6qqZ-1nAC9p?e=download&authuser=3" type="audio/mpeg">
+                <source src="audio/radicaisLivres/Jesus Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
             <label for="">Jesus, Jairo e a mulher hemorrágica - Obr Luciano Lopes</label>
@@ -87,7 +87,7 @@
             <label for="">01 de fevereiro de 2020</label>
             <br>
             <button>
-            <a href="https://doc-14-70-docs.googleusercontent.com/docs/securesc/rveuubp6e6f4174d42rkcnp9k6ofapm0/robaac3e6h3v63geit7on7uvn680km29/1581967800000/05548900624201014952/05548900624201014952/1IYHYh_RguDd7nyKN5M7lp6qqZ-1nAC9p?e=download&authuser=3   " download>
+            <a href="audio/radicaisLivres/Jesus Jairo e a mulher hemorrágica - Obr Luciano Lopes - 01 fev 2020.mp3" download>
                Download
                </a>
             </button>
