--- a/palavCulto.html
+++ b/palavCulto.html
@@ -41,6 +41,24 @@
 	 <div class="palavrasAudio">
             <br>
             <audio controls>
+                <source src="audio/cultoDomingo/Você esta numa Guerra - Pr. Sérgio Carvalho - 23 fevereiro 2020.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Você esta numa Guerra - Pr. Sérgio Carvalho</label>
+            <br>
+            <label for="">23 de fevereiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/cultoDomingo/Você esta numa Guerra - Pr. Sérgio Carvalho - 23 fevereiro 2020.mp3" download>
+               Download
+            </a>
+            </button>
+            <br>
+            <br>
+         </div>
+	 <div class="palavrasAudio">
+            <br>
+            <audio controls>
                 <source src="audio/cultoDomingo/A batalha da mente - Pr Raphael Vieira - 16 fevereiro 2020.mp3" type="audio/mpeg">
             </audio>
             <br>
