--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -31,6 +31,14 @@
     <section id="audioPalavras" class="container">
         <div class="row linhaPdf">
             <div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 01-03-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 01 de março - vid uberlandia.png" alt="">
+                </a>
+                <br>
+                <label for="">01 março 2020</label>
+                <br>
+            </div>
+            <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 23-02-2020.pdf" download>
                     <img src="image/capaInformativo/capa 23 de fevereiro - vid uberlandia.png" alt="">
                 </a>
@@ -38,6 +46,10 @@
                 <label for="">23 fevereiro 2020</label>
                 <br>
             </div>
+        </div>
+
+        </div>
+        <div class="row linhaPdf">
             <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 16-02-2020.pdf" download>
                     <img src="image/capaInformativo/capa 16 de fevereiro - vid uberlandia.png" alt="">
@@ -46,11 +58,6 @@
                 <label for="">16 fevereiro 2020</label>
                 <br>
             </div>
-
-        </div>
-
-        </div>
-        <div class="row linhaPdf">
             <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 09-02-2020.pdf" download>
                     <img src="image/capaInformativo/capa 09 de fevereiro - vid uberlandia.png" alt="">
@@ -59,6 +66,8 @@
                 <label for="">09 fevereiro 2020</label>
                 <br>
             </div>
+        </div>
+        <div class="row linhaPdf">
             <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 02-02-2020.pdf" download>
                     <img src="image/capaInformativo/capa 02 de fevereiro - vid uberlandia.png" alt="">
@@ -67,9 +76,6 @@
                 <label for="">02 fevereiro 2020</label>
                 <br>
             </div>
-
-        </div>
-        <div class="row linhaPdf">
             <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 26-01-2020.pdf" download>
                     <img src="image/capaInformativo/capa 26 de janeiro - vid uberlandia.png" alt="">
@@ -78,6 +84,8 @@
                 <label for="">26 janeiro 2020</label>
                 <br>
             </div>
+        </div>
+        <div class="row linhaPdf">
             <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 19-01-2020.pdf" download>
                     <img src="image/capaInformativo/capa 19 de janeiro - vid uberlandia.png" alt="">
@@ -86,21 +94,12 @@
                 <label for="">19 janeiro 2020</label>
                 <br>
             </div>
-        </div>
-        <div class="row linhaPdf">
             <div class="pdfAudio col-dg-6 col-dm-6">
                 <a href="pdf/Informativo 12-01-2020.pdf" download>
                     <img src="image/capaInformativo/capa 12 de janeiro - vid uberlandia.png" alt="">
                 </a>
                 <br>
                 <label for="">12 janeiro 2020</label>
-                <br>
-            </div>
-            <div class="pdfAudio col-dg-6 col-dm-6">
-                <img src="image/capaInformativo/fundo preto.png" alt="">
-                </a>
-                <br>
-                <label for=""></label>
                 <br>
             </div>
         </div>
