--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Videira Uberlândia</title>
     <meta name="author" content="Cleber Azevedp">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="image/favicon.ico" />
+    <link rel="shortcut icon" href="image/favicon.png" />
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/keyframes.css">
     <script src="js/responsive-nav.js"></script>
