--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <title>Videira Uberlândia</title>
     <meta name="author" content="Cleber Azevedo">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="image/favicon.ico" />
+    <link rel="shortcut icon" href="image/favicon.png" />
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/especial.css">
     <link rel="stylesheet" href="css/keyframes.css">
