--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
 </head>
 
 <body onload="style='animation: animatetop'">
-    <section>
+    <section style='margin-top: 0px;'>
         <div class="menuVideira">
             <br>
             <input name="" id="" type="button" value="PALAVRA - CULTO DOMINGO" onclick="window.location.href='palavCulto.html'">
