add. palavra culto 05 janeiro 2020

--- a/palavCulto.html
+++ b/palavCulto.html
@@ -182,6 +182,24 @@
             <br>
             <br>
         </div>
+	<div class="palavrasAudio">
+	    <br>
+            <audio controls>
+                <source src="audio/cultoDomingo/Aspectos da oração - Pr Adalberto Garcias - 05 janeiro 2020 .mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Aspectos da oração - Pr Adalberto Garcias</label>
+            <br>
+            <label for="">05 de janeiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/cultoDomingo/Aspectos da oração - Pr Adalberto Garcias - 05 janeiro 2020 .mp3" download>
+               Download
+               </a>
+            </button>
+            <br>
+            <br>
+        </div>
     </section>
 
 
