add. informativo 05 janeiro

--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -103,6 +103,23 @@
                 <br>
             </div>
         </div>
+        <div class="row linhaPdf">
+            <div class="pdfAudio col-dg-6 col-dm-6">
+                <a href="pdf/Informativo 05-01-2020.pdf" download>
+                    <img src="image/capaInformativo/capa 05 de janeiro - vid uberlandia.png" alt="">
+                </a>
+                <br>
+                <label for="">05 janeiro 2020</label>
+                <br>
+            </div>
+            <div class="pdfAudio col-dg-6 col-dm-6">
+                    <img src="image/capaInformativo/fundo preto.png" alt="">
+                </a>
+                <br>
+                <label for=""></label>
+                <br>
+            </div>
+        </div>
     </section>
 
     <script src="js/fastclick.js"></script>
