--- a/menuMesPalavCulto.html
+++ b/menuMesPalavCulto.html
@@ -31,30 +31,17 @@
     <section style='margin-top: -80px;'>
         <div class="menuVideira">
             <br>
-            <input name="" id="" type="button" value="PALAVRA - CULTO DOMINGO" onclick="window.location.href='palavCulto.html'">
+            <input name="" id="" type="button" value="MARÇO" onclick="window.location.href='palavCultoMar.html'">
             <br>
         </div>
         <div class="menuVideira">
             <br>
-            <input name="" id="" type="button" value="PALAVRA - CULTO RADICAIS LIVRES" onclick="window.location.href='palavRadicais.html'">
+            <input name="" id="" type="button" value="FEVEREIRO" onclick="window.location.href='palavCultoFev.html'">
             <br>
         </div>
         <div class="menuVideira">
             <br>
-            <input name="" id="" type="button" value="INFORMATIVO - CULTO DOMINGO" onclick="window.location.href='pdfCulto.html'">
-            </a>
-            <br>
-        </div>
-        <div class="menuVideira">
-            <br>
-            <input name="" id="" type="button" value="PALAVRA - CULTO DE MULHERES" onclick="window.location.href='palavMulheres.html'" style="background-image: linear-gradient(rgb(63, 3, 36), rgb(180, 22, 219)); box-shadow: 2px 7px 5px #360158;text-shadow: 1.2px 1.2px 2px #000000;">
-            </a>
-            <br>
-        </div>
-        <div class="menuVideira">
-            <br>
-            <input name="" id="" type="button" value="CONFERÊNCIA RADICAIS LIVRES 2020" onclick="window.location.href='confRadicais2020.html'" style="background-image: linear-gradient(rgb(24, 7, 97), rgb(7, 82, 145)); box-shadow: 2px 7px 5px #162774;text-shadow: 1.2px 1.2px 2px #000000;">
-            </a>
+            <input name="" id="" type="button" value="JANEIRO" onclick="window.location.href='palavCultoJan.html'">
             <br>
         </div>
     </section>
