alteracao palavra culto por mes

--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
     <section style='margin-top: -80px;'>
         <div class="menuVideira">
             <br>
-            <input name="" id="" type="button" value="PALAVRA - CULTO DOMINGO" onclick="window.location.href='palavCulto.html'">
+            <input name="" id="" type="button" value="PALAVRA - CULTO DOMINGO" onclick="window.location.href='menuMesPalavCulto.html'">
             <br>
         </div>
         <div class="menuVideira">
