--- a/pdfCulto.html
+++ b/pdfCulto.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a>
                 </li>
-                <li class="menu-item"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
+                <li class="menu-item"><a href="menuMesPalavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
                 </li>
                 <li class="menu-item"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
                 <li class="menu-item active"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
