--- a/palavMulheres.html
+++ b/palavMulheres.html
@@ -32,7 +32,7 @@
         <nav class="nav-collapse">
             <ul>
                 <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a></li>
-                <li class="menu-item active"><a href="palavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
+                <li class="menu-item active"><a href="menuMesPalavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
                 </li>
                 <li class="menu-item"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
                 <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
