--- a/palavCultoJan.html
+++ b/palavCultoJan.html
@@ -54,7 +54,7 @@
             <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" download>
+            <a href="audio/cultoDomingo/Deus não esta zangado com você - Pr. Raphael Vieira - 26 jan 2020.mp3" style='color:aqua' download>
                Download
             </a>
             </button>
@@ -74,7 +74,7 @@
             <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" download>
+            <a href="audio/cultoDomingo/Deus ouve o justo - Pr. Raphael Vieira - 19 jan 2020.mp3" style='color:aqua' download>
                Download
                </a>
             </button>
@@ -94,7 +94,7 @@
             <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" download>
+            <a href="audio/cultoDomingo/A oração que prevalece - Pr Raphael Vieira - 12 dez 2020.mp3" style='color:aqua' download>
                Download
                </a>
             </button>
@@ -114,7 +114,7 @@
             <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
             <br>
             <button>
-            <a href="audio/cultoDomingo/Aspectos da oração - Pr Adalberto Garcias - 05 janeiro 2020 .mp3" download>
+            <a href="audio/cultoDomingo/Aspectos da oração - Pr Adalberto Garcias - 05 janeiro 2020 .mp3" style='color:aqua' download>
                Download
                </a>
             </button>
