--- a/palavCultoMar.html
+++ b/palavCultoMar.html
@@ -56,7 +56,7 @@
             <label for="">Série: <i style='color:rgb(184, 61, 255)'>Culto Especial</i></label>
             <br>
             <button>
-                <a href="audio/cultoDomingo/Filhos e Herdeiros - Pra. Fabiana Faria - 01 marco 2020.mp3" download>
+                <a href="audio/cultoDomingo/Filhos e Herdeiros - Pra. Fabiana Faria - 01 marco 2020.mp3" style='color:rgb(184, 61, 255)' download>
                     Download
                 </a>
             </button>
