--- a/menuMesPalavCulto.html
+++ b/menuMesPalavCulto.html
@@ -28,7 +28,19 @@
 </head>
 
 <body onload="style='animation: animatetop'">
-    <section style='margin-top: -80px;'>
+    <header>
+        <a href="#home" class="logo" data-scroll></a>
+        <nav class="nav-collapse">
+            <ul>
+                <li class="menu-item"><a href="menu.html" data-scroll>Página Principal</a></li>
+                <li class="menu-item active"><a href="menuMesPalavCulto.html" data-scroll>Audio Palavras - Culto Domingo</a>
+                </li>
+                <li class="menu-item"><a href="palavRadicais.html" data-scroll>Audio Palavras - Culto Radicais</a></li>
+                <li class="menu-item"><a href="pdfCulto.html" data-scroll>Informativo - Culto Domingo</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
         <div class="menuVideira">
             <br>
             <input name="" id="" type="button" value="MARÇO" onclick="window.location.href='palavCultoMar.html'">
